--- a/index.html
+++ b/index.html
@@ -17,19 +17,19 @@
                 <h2>Plant Name: Bijasal</h2>
                 <hr>
                 <br>
-                <p><strong>Benefits:</strong> </p>
+                <p><strong>Benefits:</strong> The Bijasal plant (Pterocarpus marsupium), also known as Indian Kino, has a range of health, environmental, and medicinal benefits. Traditionally, it is highly valued for its medicinal properties, particularly for aiding in the management of diabetes. The heartwood of the plant contains compounds that help in lowering blood sugar levels, which makes it a common choice in Ayurvedic treatments. It is also known to promote healthy skin and alleviate inflammation. Additionally, Bijasal trees are valuable in controlling soil erosion due to their strong root systems, making them beneficial for environmental conservation and the local ecosystem.</p>
                 <br>
                 <hr>
                 <br>
-                <p><strong>Season:</strong> </p>
+                <p><strong>Season:</strong> The Bijasal plant is best suited for tropical and subtropical climates and thrives in regions with a well-defined dry season. It requires a warm environment and usually flourishes between March and October, especially in regions where there’s a clear distinction between wet and dry seasons. During the monsoon, the plant experiences vigorous growth, but it also adapts well to drought conditions, thanks to its resilient root structure. These seasonal adaptations make Bijasal an excellent choice for areas with varying rainfall.</p>
                 <br>
                 <hr>
                 <br>
-                <p><strong>Region:</strong> </p>
+                <p><strong>Region:</strong> Bijasal is native to India, particularly in the central and southern parts, and also grows in parts of Sri Lanka and Nepal. It is commonly found in deciduous forests and thrives in regions with rich, well-drained soils. In India, it is especially abundant in the Western Ghats, Madhya Pradesh, and along the eastern and western coastal areas. Its preference for tropical climates makes it ideal for cultivation in humid and semi-humid regions, where it grows robustly, adding to the biodiversity of the local forests.</p>
                 <br>
                 <hr>
                 <br>
-                <p><strong>Age:</strong> </p>
+                <p><strong>Age:</strong> The Bijasal tree is known for its longevity, often living over 100 years in natural conditions. It is a slow-growing tree, taking several decades to reach full maturity, and typically grows to a height of 30 to 40 meters. Due to its slow growth, Bijasal is often planted in protected areas or sustainable forestry projects to ensure long-term growth. The tree’s long lifespan and robust structure make it highly valued for its timber, which is durable and used for various purposes, from furniture to traditional medicine.</p>
                 <br>
                 <hr>
                 <br>
